# CNPJ-datalake

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
apps/airflow/dags/: cnpj_dataset_dags.py
apps/cli/: run_pipeline.py
docs/: CONTEXTO.md  architecture.md  arquitetura.html  arquitetura.py  runbook.md
infra/: docker-compose.yml
infra/grafana/dashboards/: cnpj-pipeline-overview.json
infra/grafana/provisioning/dashboards/: dashboards.yml
services/airflow/: Dockerfile  requirements.txt
services/airflow/dags/: cnpj_dataset_dags.py
services/minio/: init-minio.sh
services/postgres/: init-db.sh  schemas.sql
services/pyspark/cli/: run_pipeline.py
src/: __init__.py
src/cnpj_datalake/: __init__.py  cli.py
src/cnpj_datalake/config/: __init__.py  settings.py
src/cnpj_datalake/domain/: __init__.py  layouts.py  models.py
src/cnpj_datalake/services/: __init__.py
src/cnpj_datalake/services/minio/: __init__.py  client.py
src/cnpj_datalake/services/observability/: __init__.py  metrics.py
src/cnpj_datalake/services/postgres/: __init__.py  client.py
src/cnpj_datalake/services/pyspark/: __init__.py  bronze.py  gold.py  orchestration.py  silver.py  spark.py
src/cnpj_datalake/utils/: __init__.py  logger.py
src/scripts/: detect_input_encoding.py  profile_source_files.py  reingest_table.py  reset_datastores.py
tests/: test_airflow_dag_logic.py  test_config.py  test_layouts.py  test_month_pipeline.py  test_observability_smoke.py  test_reset_datastores.py
