[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnpj-datalake"
version = "0.1.0"
description = "Pipeline Bronze, Silver e Gold com PySpark, MinIO, PostgreSQL e Airflow para dados CNPJ."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "GitHub Copilot" }
]
dependencies = [
  "pyspark>=3.5.1",
  "minio>=7.1.0",
  "psycopg2-binary>=2.9.0",
  "python-dotenv>=0.21.0",
  "prometheus-client>=0.20.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "black>=22.12.0",
  "flake8>=5.0.0",
  "mypy>=0.991",
  "isort>=5.11.0"
]

[project.scripts]
cnpj-datalake = "src.cnpj_datalake.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"